# DCPlus

./: .coveragerc  .fossa.yml  .gitignore  .nwa-config.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  ruff.toml  sonar-project.properties
.devcontainer/: .bashrc  devcontainer.json  onCreateCommand.sh
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml  docs.yaml  release.yaml  validate_pr_title.yaml
.pre-commit-hooks/: check-sensitive-files.sh  sensitive-files-whitelist.txt
docs/: index.md  partial_inverse_lodf_plan.md  theory_to_implementation.md
docs/stylesheets/: extra.css
notebooks/: grid_explorer.ipynb
src/dc_plus/: place_holder.py
src/dc_plus/example_grids/pypowsbl/: example_grids.py
src/dc_plus/importing/: import_helpers.py  import_schema.py
src/dc_plus/importing/interpss/: __init__.py  interpss_import.py  interpss_import_helpers.py
src/dc_plus/importing/pandapower/: __init__.py  import_helpers.py  pandapower_import.py
src/dc_plus/importing/powsybl/: powsybl_import.py  powsybl_import_helpers.py  powsybl_loadflow_parameter.py  powsybl_network_helpers.py
src/dc_plus/interfaces/: jacobian_interface.py  jacobian_network_data.py  network_information.py  type_hints.py
src/dc_plus/jax/: bsdf.py  lodf_branches.py  lodf_voltages.py  low_rank_helper.py
src/dc_plus/numpy/: __init__.py  bsdf_full_rank.py  lodf.py  low_rank_helper.py
src/dc_plus/preprocess/: create_network_data.py  helper_functions.py  preprocess_jacobian_bsdf.py
tests/: __init__.py  test_notebooks.py  test_placeholder.py
tests/importing/: test_compare_imports.py  test_import_helpers.py  test_native_import_consistency.py  test_powerflow_consistency.py  test_powsybl_vs_pandapower_dynamic.py
tests/importing/interpss/: conftest.py  test_interpss_branch.py  test_interpss_bus.py  test_interpss_cross_consistency.py  test_interpss_end_to_end.py  test_interpss_import_helpers.py  test_interpss_injection.py  test_interpss_limit.py  test_interpss_shunt.py
tests/importing/powsybl/: test_powsybl_import.py
tests/interfaces/: test_jacobian_network_data.py
tests/jax/: test_bsdf_jax.py  test_lodf_jax.py  test_lodf_jax_interpss.py
tests/numpy/: test_bsdf.py  test_lodf.py  test_low_rank_helper.py
tests/preprocess/: test_preprocess_jacobian_bsdf.py  test_preprocessing.py
tests/test_helper/: bsdf_helper.py
