[project]
name = "dc_plus"
dynamic = ["version"]
description = "A GPU based solver for an voltage informed security Analysis for topological actions."

readme = "README.md"
keywords = [
    "topological remedial actions",
    "DCPlus loadflow",
    "DC+ loadflow",
    "One Step AC",
    "One AC Iteration",
    "GPU Topology Optimization",
    "Contingency Analysis",
    "Voltage-sensitive distribution factors",
    "LODF",
    "Busbar Outage",
]
classifiers=[
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.11'
]
requires-python = ">=3.11,<3.12"


dependencies = [
    "pydantic>=2.8.2,<3.0.0",
    "pandapower>=3.0.0,<4.0.0",
    "pypowsybl>=1.14.0",
    "numpydantic>=1.6.4,<2.0.0",
    "pypowsybl-jupyter>=1.3.0",
    "matplotlib>=3.10.8",
    "jax (>=0.4.30)",
    "jax-dataclasses (>=1.6.2,<2.0.0)"
]

license = "MPL-2.0"
license-files = ["LICENSE"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [
    "src/dc_plus",
]

[project.optional-dependencies]
pypowsybl = ["pypowsybl>=1.13.0"]
pandapower = ["pandapower>=3.0.0"]
interpss = [
    "jpype1>=1.7.1",
]

[dependency-groups]
dev = [
    "pep8-naming",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "pytest-mock",
    "pytest-timeout",
    "pytest-xdist>=3.8.0",
    "ipykernel>=6.25.2",
    "jupyter>=1.0.0",
    "ruff",
    "nbclient>=0.10.4",
    "jaxtyping",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-techdocs-core >=1.5.4",
    "mkdocstrings[python]>=0.30.0",
]

# TOOLS
[tool.uv]
# Excludes nvconvert because of CVE.
# nbconverts pdf-conversion is not needed
# https://access.redhat.com/security/cve/cve-2025-53000
# See https://github.com/astral-sh/uv/issues/7214#issuecomment-2340188447
override-dependencies = [
    "nbconvert; sys_platform == 'never'",
]
[tool.pytest.ini_options]

pythonpath = [
    "src",
    "notebooks",
    ]

addopts = [
  "--durations=20",
  "--junit-xml=test-report.xml",
  "--new-first",
  "--show-capture=all",
  "--verbosity=4",
]
junit_family = "legacy"
testpaths = [
        "tests",
        ]
timeout = 300
timeout_func_only = true
filterwarnings = [
]

# Misc
[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["*/*tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
ignored_tag_formats = ["v$major.$minor.$patch.$devrelease"]
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = false

[tool.uv-secure.ignore_packages]
ray = [] # Ignore issues with all versions of the ray package
